// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`react/UILink > renders correctly - basic 1`] = `
<a
  class="ui-link large"
  href="https://test.com"
  tabindex="0"
>
  Test
</a>
`;

exports[`react/UILink > renders correctly - disabled 1`] = `
<a
  class="ui-link  disabled"
  href="https://test.com"
  tabindex="-1"
>
  Test
</a>
`;

exports[`react/UILink > renders correctly - with id 1`] = `
<a
  class="ui-link "
  href="https://test.com"
  id="test"
  tabindex="0"
>
  Test
</a>
`;

exports[`react/UILink > renders correctly - with itemProp 1`] = `
<a
  class="ui-link "
  href="https://test.com"
  itemprop="name"
  tabindex="0"
>
  Test
</a>
`;

exports[`react/UILink > renders correctly - with listeners 1`] = `
<a
  class="ui-link "
  href=""
  tabindex="0"
/>
`;

exports[`react/UILink > renders correctly - with rel 1`] = `
<a
  class="ui-link "
  href="https://test.com"
  rel="no referrer"
  tabindex="0"
>
  Test
</a>
`;

exports[`react/UILink > renders correctly - with target 1`] = `
<a
  class="ui-link "
  href="https://test.com"
  tabindex="0"
  target="_blank"
>
  Test
</a>
`;
